--- a/app/scss/globals.scss
+++ b/app/scss/globals.scss
@@ -1,5 +1,13 @@
+@import '@/app/scss/variables';
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	color: $black;
+}
+
+.main {
+	background: $lighterBlue;
+	min-height: 100vh;
 }
