--- a/app/components/jobs-list/JobsList.module.scss
+++ b/app/components/jobs-list/JobsList.module.scss
@@ -1,3 +1,5 @@
+@import '@/app/scss/variables';
+
 .jobsList {
 	display: flex;
 	flex-direction: column;
@@ -5,4 +7,11 @@
 	max-width: 850px;
 	margin: 0 auto;
 	padding: 1rem;
+	.error {
+		background: $danger;
+		color: $dangerText;
+		border: 1px solid $dangerBorder;
+		padding: 1rem;
+		border-radius: 2px;
+	}
 }
