--- a/app/components/job-card/JobCard.module.scss
+++ b/app/components/job-card/JobCard.module.scss
@@ -10,6 +10,9 @@
 	flex-direction: column;
 	gap: 10px;
 	background-color: $white;
+	.tags {
+		padding: 5px 0;
+	}
 	.company {
 		padding: 0;
 		font-size: 16px;
@@ -19,5 +22,46 @@
 	}
 	.location {
 		font-size: 16px;
+	}
+	.description {
+		font-size: 14px;
+		padding: 10px 0;
+	}
+	.externalButton {
+		display: flex;
+		justify-content: flex-end;
+		padding: 1rem 0;
+		gap: 10px;
+		a,
+		button {
+			padding: 10px 15px;
+			border-radius: 4px;
+			width: fit-content;
+			outline: unset;
+			border: 1px solid $successBorder;
+			color: $successText;
+			background: $success;
+			text-decoration: none;
+			font-size: 12px;
+			cursor: pointer;
+			&:hover {
+				background-color: darken($success, 5%);
+				border-color: darken($successBorder, 5%);
+			}
+		}
+		button {
+			background: $warning;
+			color: $warningText;
+			border: 1px solid $warningBorder;
+			&:hover {
+				background-color: darken($warning, 5%);
+				border-color: darken($warningBorder, 5%);
+			}
+		}
+	}
+	.map {
+		height: 480px;
+		padding: 1rem 0;
+		display: flex;
 	}
 }
