--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -3,19 +3,19 @@ $dangerText: #721c24;
 $dangerBorder: #f5c6cb;
 
 $success: #d4edda;
-$successColor: #155759;
+$successText: #155759;
 $successBorder: #c3e6cb;
 
 $info: #d1ecf1;
-$infoColor: #0c548e;
+$infoText: #0c548e;
 $infoBorder: #bee5eb;
 
 $warning: #fff3cd;
-$warningColor: #b87a04;
+$warningText: #b87a04;
 $warningBorder: #ffeeba;
 
 $primary: #cce5ff;
-$primaryColor: #004085;
+$primaryText: #004085;
 $primaryBorder: #b8daff;
 
 $lightGray: #f7f7f9;
